# btl

list(APPEND sources
    "btlb/btlb_blob.cpp"
    "btlb/btlb_blob.h"
    "btlb/btlb_blobstreambuf.cpp"
    "btlb/btlb_blobstreambuf.h"
    "btlb/btlb_blobutil.cpp"
    "btlb/btlb_blobutil.h"
    "btlb/btlb_pooledblobbufferfactory.cpp"
    "btlb/btlb_pooledblobbufferfactory.h"
    "btlmt/btlmt_asyncchannel.cpp"
    "btlmt/btlmt_asyncchannel.h"
    "btlmt/btlmt_channelpool.cpp"
    "btlmt/btlmt_channelpool.h"
    "btlmt/btlmt_channelpoolchannel.cpp"
    "btlmt/btlmt_channelpoolchannel.h"
    "btlmt/btlmt_channelpoolconfiguration.cpp"
    "btlmt/btlmt_channelpoolconfiguration.h"
    "btlmt/btlmt_channelstatus.cpp"
    "btlmt/btlmt_channelstatus.h"
    "btlmt/btlmt_channeltype.cpp"
    "btlmt/btlmt_channeltype.h"
    "btlmt/btlmt_session.cpp"
    "btlmt/btlmt_session.h"
    "btlmt/btlmt_sessionfactory.cpp"
    "btlmt/btlmt_sessionfactory.h"
    "btlmt/btlmt_sessionpool.cpp"
    "btlmt/btlmt_sessionpool.h"
    "btlmt/btlmt_tcptimereventmanager.cpp"
    "btlmt/btlmt_tcptimereventmanager.h"
    "btls/btls_iovec.cpp"
    "btls/btls_iovec.h"
    "btls/btls_iovecutil.cpp"
    "btls/btls_iovecutil.h"
    "btls/btls_leakybucket.cpp"
    "btls/btls_leakybucket.h"
    "btls/btls_ratelimiter.cpp"
    "btls/btls_ratelimiter.h"
    "btls/btls_reservationguard.cpp"
    "btls/btls_reservationguard.h"
    "btls5/btls5_credentials.cpp"
    "btls5/btls5_credentials.h"
    "btls5/btls5_detailedstatus.cpp"
    "btls5/btls5_detailedstatus.h"
    "btls5/btls5_negotiator.cpp"
    "btls5/btls5_negotiator.h"
    "btls5/btls5_networkconnector.cpp"
    "btls5/btls5_networkconnector.h"
    "btls5/btls5_networkdescription.cpp"
    "btls5/btls5_networkdescription.h"
    "btls5/btls5_networkdescriptionutil.cpp"
    "btls5/btls5_networkdescriptionutil.h"
    "btls5/btls5_proxydescription.cpp"
    "btls5/btls5_proxydescription.h"
    "btls5/btls5_testserver.cpp"
    "btls5/btls5_testserver.h"
    "btlsc/btlsc_cbchannel.cpp"
    "btlsc/btlsc_cbchannel.h"
    "btlsc/btlsc_cbchannelallocator.cpp"
    "btlsc/btlsc_cbchannelallocator.h"
    "btlsc/btlsc_channel.cpp"
    "btlsc/btlsc_channel.h"
    "btlsc/btlsc_channelallocator.cpp"
    "btlsc/btlsc_channelallocator.h"
    "btlsc/btlsc_flag.cpp"
    "btlsc/btlsc_flag.h"
    "btlsc/btlsc_timedcbchannel.cpp"
    "btlsc/btlsc_timedcbchannel.h"
    "btlsc/btlsc_timedcbchannelallocator.cpp"
    "btlsc/btlsc_timedcbchannelallocator.h"
    "btlsc/btlsc_timedchannel.cpp"
    "btlsc/btlsc_timedchannel.h"
    "btlsc/btlsc_timedchannelallocator.cpp"
    "btlsc/btlsc_timedchannelallocator.h"
    "btlscm/btlscm_version.cpp"
    "btlscm/btlscm_version.h"
    "btlscm/btlscm_versiontag.cpp"
    "btlscm/btlscm_versiontag.h"
    "btlso/btlso_defaulteventmanager.cpp"
    "btlso/btlso_defaulteventmanager.h"
    "btlso/btlso_defaulteventmanager_devpoll.cpp"
    "btlso/btlso_defaulteventmanager_devpoll.h"
    "btlso/btlso_defaulteventmanager_epoll.cpp"
    "btlso/btlso_defaulteventmanager_epoll.h"
    "btlso/btlso_defaulteventmanager_poll.cpp"
    "btlso/btlso_defaulteventmanager_poll.h"
    "btlso/btlso_defaulteventmanager_pollset.cpp"
    "btlso/btlso_defaulteventmanager_pollset.h"
    "btlso/btlso_defaulteventmanager_select.cpp"
    "btlso/btlso_defaulteventmanager_select.h"
    "btlso/btlso_defaulteventmanagerimpl.cpp"
    "btlso/btlso_defaulteventmanagerimpl.h"
    "btlso/btlso_endpoint.cpp"
    "btlso/btlso_endpoint.h"
    "btlso/btlso_event.cpp"
    "btlso/btlso_event.h"
    "btlso/btlso_eventmanager.cpp"
    "btlso/btlso_eventmanager.h"
    "btlso/btlso_eventmanagertester.cpp"
    "btlso/btlso_eventmanagertester.h"
    "btlso/btlso_eventtype.cpp"
    "btlso/btlso_eventtype.h"
    "btlso/btlso_flag.cpp"
    "btlso/btlso_flag.h"
    "btlso/btlso_inetstreamsocket.cpp"
    "btlso/btlso_inetstreamsocket.h"
    "btlso/btlso_inetstreamsocketfactory.cpp"
    "btlso/btlso_inetstreamsocketfactory.h"
    "btlso/btlso_ioutil.cpp"
    "btlso/btlso_ioutil.h"
    "btlso/btlso_ipresolutioncache.cpp"
    "btlso/btlso_ipresolutioncache.h"
    "btlso/btlso_ipv4address.cpp"
    "btlso/btlso_ipv4address.h"
    "btlso/btlso_lingeroptions.cpp"
    "btlso/btlso_lingeroptions.h"
    "btlso/btlso_platform.cpp"
    "btlso/btlso_platform.h"
    "btlso/btlso_resolveutil.cpp"
    "btlso/btlso_resolveutil.h"
    "btlso/btlso_sockethandle.cpp"
    "btlso/btlso_sockethandle.h"
    "btlso/btlso_socketimputil.cpp"
    "btlso/btlso_socketimputil.h"
    "btlso/btlso_socketoptions.cpp"
    "btlso/btlso_socketoptions.h"
    "btlso/btlso_socketoptutil.cpp"
    "btlso/btlso_socketoptutil.h"
    "btlso/btlso_streamsocket.cpp"
    "btlso/btlso_streamsocket.h"
    "btlso/btlso_streamsocketfactory.cpp"
    "btlso/btlso_streamsocketfactory.h"
    "btlso/btlso_tcptimereventmanager.cpp"
    "btlso/btlso_tcptimereventmanager.h"
    "btlso/btlso_timemetrics.cpp"
    "btlso/btlso_timemetrics.h"
    "btlso/btlso_timereventmanager.cpp"
    "btlso/btlso_timereventmanager.h"
    "btlsos/btlsos_tcpacceptor.cpp"
    "btlsos/btlsos_tcpacceptor.h"
    "btlsos/btlsos_tcpcbacceptor.cpp"
    "btlsos/btlsos_tcpcbacceptor.h"
    "btlsos/btlsos_tcpcbchannel.cpp"
    "btlsos/btlsos_tcpcbchannel.h"
    "btlsos/btlsos_tcpcbconnector.cpp"
    "btlsos/btlsos_tcpcbconnector.h"
    "btlsos/btlsos_tcpchannel.cpp"
    "btlsos/btlsos_tcpchannel.h"
    "btlsos/btlsos_tcpconnector.cpp"
    "btlsos/btlsos_tcpconnector.h"
    "btlsos/btlsos_tcptimedacceptor.cpp"
    "btlsos/btlsos_tcptimedacceptor.h"
    "btlsos/btlsos_tcptimedcbacceptor.cpp"
    "btlsos/btlsos_tcptimedcbacceptor.h"
    "btlsos/btlsos_tcptimedcbchannel.cpp"
    "btlsos/btlsos_tcptimedcbchannel.h"
    "btlsos/btlsos_tcptimedcbconnector.cpp"
    "btlsos/btlsos_tcptimedcbconnector.h"
    "btlsos/btlsos_tcptimedchannel.cpp"
    "btlsos/btlsos_tcptimedchannel.h"
    "btlsos/btlsos_tcptimedconnector.cpp"
    "btlsos/btlsos_tcptimedconnector.h"
)
source_group("" FILES ${sources})

add_library(btl STATIC ${sources})

target_include_directories(btl PUBLIC
    btlb
    btlmt
    btls
    btls5
    btlsc
    btlscm
    btlso
    btlsos
)

target_link_libraries(btl PUBLIC
    bdl
    bsl
)
